force-app/main/default/objects/OpportunityContactRole/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <description>SF20FA-236
Lookup to contact External Record. To capture the external record Id of Contact</description>
    <formula>Contact.External_Record_Id__c</formula>
    <label>External Contact Id</label>
    <type>Text</type>
</CustomField>