force-app/main/default/objects/OpportunityContactRole/fields/External_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_Id__c</fullName>
    <description>SF20FA-236
Lookup to Opportunity External Record. To capture the external record Id of Opportunity</description>
    <formula>Opportunity.External_Record_Id__c</formula>
    <label>External Opportunity Id</label>
    <type>Text</type>
</CustomField>