force-app/main/default/objects/OpportunityContactRole/fields/External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Id__c</fullName>
    <description>SF20FA-236
To capture the record id of the old org</description>
    <label>External Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>