force-app/main/default/objects/OpportunityContactRole/fields/External_Sync_Response__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Response__c</fullName>
    <description>SF20FA-236
To capture the response of the sync</description>
    <label>External Sync Response</label>
    <type>TextArea</type>
</CustomField>