force-app/main/default/objects/OpportunityContactRole/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Part of SF20FA-236
Created to check if Contact Role is Active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>